bugfix: stickers suggestor have default not beautiful scrollbar - cleanup css

--- a/src/Components/ColumnMiddle/StickersHint.css
+++ b/src/Components/ColumnMiddle/StickersHint.css
@@ -12,8 +12,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
 }
 
 .stickers-hint-content {
@@ -21,6 +19,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 .sticker-hints-item {
